--- a/DSIOfficial/app/src/main/AndroidManifest.xml
+++ b/DSIOfficial/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/dsi_app_logo"
+        android:icon="@drawable/dsi_logo"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/dsi_app_logo"
+        android:roundIcon="@drawable/dsi_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
