--- a/DSIOfficial/app/src/main/AndroidManifest.xml
+++ b/DSIOfficial/app/src/main/AndroidManifest.xml
@@ -4,11 +4,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <uses-feature android:name="android.hardware.camera"
+    <uses-feature
+        android:name="android.hardware.camera"
         android:required="true" />
-
 
     <application
         android:allowBackup="true"
@@ -17,13 +17,7 @@
         android:roundIcon="@drawable/hub_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".MainActivity" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -32,7 +26,7 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/paths"> </meta-data>
+                android:resource="@xml/paths" />
         </provider>
 
         <activity android:name=".LoginActivity" />
@@ -41,12 +35,24 @@
         <activity android:name=".BookInfoActivity" />
         <activity android:name=".PostNotificationActivity" />
         <activity android:name=".MyProfileActivity" />
-        <activity android:name=".NotificationInfoActivity"></activity>
-        
-        <service android:name=".ServerHeartbeatService"
-            android:exported = "false">
-        </service>
-        
+        <activity android:name=".NotificationInfoActivity" />
+
+        <service
+            android:name=".ServerHeartbeatService"
+            android:exported="false"
+            android:process=":remote" />
+
+        <activity android:name=".SplashScreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".AboutUsActivity"
+            android:label="@string/title_activity_about_us"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
