--- a/DSIOfficial/app/src/main/AndroidManifest.xml
+++ b/DSIOfficial/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:name="android.hardware.camera"
         android:required="true" />
 
+    <uses-feature android:name="android.hardware.screen.portrait" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/hub_logo"
@@ -17,7 +19,7 @@
         android:roundIcon="@drawable/hub_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity" android:screenOrientation="portrait"/>
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -29,13 +31,13 @@
                 android:resource="@xml/paths" />
         </provider>
 
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".SignupActivity" />
-        <activity android:name=".NewBookActivity" />
-        <activity android:name=".BookInfoActivity" />
-        <activity android:name=".PostNotificationActivity" />
-        <activity android:name=".MyProfileActivity" />
-        <activity android:name=".NotificationInfoActivity" />
+        <activity android:name=".LoginActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".SignupActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".NewBookActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".BookInfoActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".PostNotificationActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".MyProfileActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".NotificationInfoActivity" android:screenOrientation="portrait"/>
 
         <service
             android:name=".ServerHeartbeatService"
@@ -52,7 +54,8 @@
         <activity
             android:name=".AboutUsActivity"
             android:label="@string/title_activity_about_us"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"> </activity>
     </application>
 
 </manifest>
